# Kingdom

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  run_castle_modern.bat  run_castle_old_school.bat  run_demo.bat  run_kingdom.bat  run_kingdom_TRS80.bat  run_kingdom_modern.bat  run_regression.bat  run_save_load.bat  run_state_check.bat  todo-3-19-26.md
.ipynb_checkpoints/: pyproject-checkpoint.toml
data/: demo_castle.json  demo_initial_state.json  initial_state.json  ralf-save.json  roundtrip_validation.tmp.json  rt.tmp.json  working_state.demo.json
docs/: 100 challenging phrases for parser testing.md  Interpretter TODO.md  Parser Refactor TODO.md  Resolver TODO.md  architecture_plan.md  item-related-verb-todo.md  main flow restructure.txt  main_parse_through_render_flow.md  project_structure.md  restucure for All support.txt  todo.txt  trs80_legacy_spirit_guide.md
saves/: DAVE.json  Ralf.json  _tmp_dbg.json  quicksave.json  rakf.json  ralf.json  s.json  save.json
scripts/: backup_incremental.py  check_world_json.py  find_obsolete_attributes.py  pre_edit.py  validate_save_load_roundtrip.py
tests/: demo.py  dummy_noun_registry.py  dummy_verb_registry.py  regression.py  test_command_outcome_contract_phase4.py  test_command_outcome_rendering_phase4.py  test_container_roundtrip_standalone.py  test_guard_synonym_loot_regression.py  test_interpreter_contracts_phase1.py  test_interpreter_executor_contract_phase2.py  test_inventory_get_behavior.py  test_parser.py  test_parser_contracts_phase1.py  test_parser_dataset.py  test_room_renderer.py  (+3 more)
(+100 files in other folders)
