[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "kingdom"
version = "0.1.0"

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = [
	"tests",
	"src/kingdom/tests",
]
python_files = ["test_*.py", "demo.py"]
